# uss64

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  GenerateHooks.py  Makefile  ParseHooks.py  README.md  TODO.md  Toolchain-mips64-linux-x86_64.cmake  build.sh  compile.sh  gbi.h  hello_world.c  hook.gsc  sm64.c  sm64.h  sm64_hooks.yml  uss64.c  uss64.ld  uss64_hooks.yml
asm/: hook.asm  respawn_object_hook2.s
debug_scripts/: uss64_dl_debug.js  uss64_dump_master_dl.js
docs/source/: conf.py  index.rst
docs/source/hooks/: hook_files.rst
n64split/configs/: sm64.shindou.yaml  sm64.u.yaml
patch/: hook.asm  make-rom.lua  patch.sh
python/: GenerateHooks.py  HooksParser.py  ParseHooks.py
src/: gz_api.c  input.h  offsets.c  settings.c  settings.h  settings_uss64.c  settings_uss64.h  sm64.c  sm64.h  types.h  uss64.c  uss64.h  uss64_commands.c  uss64_settings.c  uss64_timer.c  uss64_warps.c
